# rustx-eth-call

./: .env.example  Cargo.toml  README.md  succinct.json
circuits/: Cargo.toml
circuits/src/: main.rs
contracts/script/: EthCallOracleV1.s.sol  deploy.sh
contracts/src/: EthCallOracleV1.sol
program/: Cargo.toml
