[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel", "std", "timing"]
parallel = []
std = []
timing = []
ci = []

[dependencies]
rustx = {git = "https://github.com/succinctlabs/succinctx.git", ref = "d9df4099d7b37eb947a839deba719d7eb06852b5"}
alloy-primitives = "0.4.2"
alloy-sol-types = "0.4.2"
dotenv = "0.15.0"
env_logger = "0.10.0"
ethers = "2.0.10"
hex = "0.4.3"
log = "0.4.20"
tokio = "1.33.0"